--- a/app/globals.css
+++ b/app/globals.css
@@ -56,3 +56,7 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.futuristic-font {
+  font-family: "Orbitron", sans-serif;
+}
