--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Consolas, monospace;
   -ms-overflow-style: none;
 }
 
@@ -58,6 +58,7 @@ body {
 .ql-editor {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  font-family: Consolas, monospace;
 }
 
 .futuristic-font {
